[gd_scene load_steps=9 format=3 uid="uid://bfk7wccmsndfr"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_7me6c"]
[ext_resource type="StyleBox" uid="uid://bxwylw4uk8cyk" path="res://assets/styles/ClassSettingsBG.tres" id="2_56yd5"]
[ext_resource type="Script" uid="uid://01ronclpv10b" path="res://panels/UIProgrammer/ParameterController/ParameterController.gd" id="3_437gf"]
[ext_resource type="FontFile" uid="uid://crlak6jhg5jy2" path="res://assets/font/RubikMonoOne-Regular.ttf" id="4_33gbp"]
[ext_resource type="Texture2D" uid="uid://dlikb8or3xepr" path="res://assets/icons/Reset.svg" id="4_ukk8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjuwc"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.129458, 0.129458, 0.129458, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ced7"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.12156863, 0.12156863, 0.12156863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_qnt7p"]
font = ExtResource("4_33gbp")
font_size = 26

[node name="ParameterController" type="PanelContainer" node_paths=PackedStringArray("_function_list", "_slider", "_title_button", "_title_bar", "_value_label", "_preset_container")]
custom_minimum_size = Vector2(219, 0)
offset_right = 402.0
offset_bottom = 319.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_7me6c")
theme_override_styles/panel = ExtResource("2_56yd5")
script = ExtResource("3_437gf")
_function_list = NodePath("VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer/FunctionList")
_slider = NodePath("VBoxContainer/PanelContainer3/HBoxContainer/VSlider")
_title_button = NodePath("VBoxContainer/TitleBar/HBoxContainer/PanelContainer2/TitleButton")
_title_bar = NodePath("VBoxContainer/TitleBar")
_value_label = NodePath("VBoxContainer/TitleBar/HBoxContainer/PanelContainer/Value")
_preset_container = NodePath("VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer/PresetContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleBar" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sjuwc")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleBar"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/TitleBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ced7")

[node name="TitleButton" type="Button" parent="VBoxContainer/TitleBar/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Dimmer"
flat = true
alignment = 0
icon_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/TitleBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/panel = SubResource("StyleBoxFlat_3ced7")

[node name="Value" type="Label" parent="VBoxContainer/TitleBar/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 0
text = "100%"
label_settings = SubResource("LabelSettings_qnt7p")

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSlider" type="VSlider" parent="VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 20
ticks_on_borders = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PresetContainer" type="GridContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 5

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Erace" type="Button" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("4_ukk8e")

[node name="Default" type="Button" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_33gbp")
text = "d"

[node name="FunctionList" type="OptionButton" parent="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[connection signal="gui_input" from="VBoxContainer/TitleBar/HBoxContainer/PanelContainer/Value" to="." method="_on_value_gui_input"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer3/HBoxContainer/VSlider" to="." method="_set_value"]
[connection signal="pressed" from="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer/Erace" to="." method="_on_erase_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer/Default" to="." method="_on_default_pressed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer/FunctionList" to="." method="_on_function_list_item_selected"]
